--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"/>
-        <activity android:name=".PopupActivity" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
-        <activity android:name=".AllergyActivity" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
+        <activity android:name=".PopupActivity"
+            android:label="정보"
+            android:theme="@style/DialogStyle"/>
+
+        <activity android:name=".AllergyActivity"
+            android:label="알레르기 정보"
+            android:theme="@style/DialogStyle"/>
+
+        <activity android:name=".SettingActivity"
+            android:label="설정"
+            android:theme="@style/DialogStyle"/>
     </application>
 </manifest>
